results/SVCOMP/specgen/log-StringMiscellaneous01-2024_03_02_23_40_10.txt
public class StringMiscellaneous01 {
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; \old(s1.charAt(24-count)) == s2.charAt(count));
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; \old(s3.charAt(i)) == charArray[i]);
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:2: error: cannot find symbol
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; \old(s1.charAt(24-count)) == s2.charAt(count));
                                                                             ^
  symbol:   variable s1
  location: class StringMiscellaneous01
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:2: error: cannot find symbol
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; \old(s1.charAt(24-count)) == s2.charAt(count));
                                                                                                     ^
  symbol:   variable s2
  location: class StringMiscellaneous01
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; \old(s3.charAt(i)) == charArray[i]);
                                                                ^
  symbol:   variable s3
  location: class StringMiscellaneous01
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; \old(s3.charAt(i)) == charArray[i]);
                                                                                 ^
  symbol:   variable charArray
  location: class StringMiscellaneous01
4 errors

public class StringMiscellaneous01 {
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; "Automatic Test Generation".charAt(24-count) == "noitareneG tseT citamotuA".charAt(count));
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == charArray[i]);
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == charArray[i]);
                                                                                ^
  symbol:   variable charArray
  location: class StringMiscellaneous01
1 error

public class StringMiscellaneous01 {
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; "Automatic Test Generation".charAt(24-count) == "noitareneG tseT citamotuA".charAt(count));
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == \old(charArray[i]));
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:3: error: cannot find symbol
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == \old(charArray[i]));
                                                                                     ^
  symbol:   variable charArray
  location: class StringMiscellaneous01
1 error

public class StringMiscellaneous01 {
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; "Automatic Test Generation".charAt(24-count) == "noitareneG tseT citamotuA".charAt(count));
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == "Autom".getChars(i, i+1, new char[1], 0)[0]);
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/StringMiscellaneous01.java:3: error: array required, but void found
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == "Autom".getChars(i, i+1, new char[1], 0)[0]);
                                                                                                ^
1 error

public class StringMiscellaneous01 {
  //@ ensures \result ==> (\forall int count; 0 <= count && count < 25; "Automatic Test Generation".charAt(24-count) == "noitareneG tseT citamotuA".charAt(count));
  //@ ensures \result ==> (\forall int i; 0 <= i && i < 5; "Autom".charAt(i) == "Autom".toCharArray()[i]);
  public static boolean f() {
    String s1 = "Automatic Test Generation";
    String s2 = "noitareneG tseT citamotuA";
    String s3 = "Autom";
    char[] charArray = new char[5];

    if(s1.length() != 25) return false;

    int i = 0;
    for (int count = s1.length() - 1; count >= 0; count--) {
      System.out.printf("%c ", s1.charAt(count));
      if(s1.charAt(count) != s2.charAt(i)) return false;
      ++i;
    }

    // copy characters from string into charArray
    s1.getChars(0, 5, charArray, 0);
    i = 0;
    for (char character : charArray) {
      System.out.print(character);
      if(s3.charAt(i) != character) return false;
      ++i;
    }
    return true;
  }
}
